--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-spring.application.name=pmj-backend
+spring.application.name=pmj-enquiry-backend
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pmj_enquiry
+# Frontend origins for dev (comma-separated)
+frontend.urls=http://localhost:3000
+
+# Local MySQL (change to your local values)
+spring.datasource.url=jdbc:mysql://localhost:3306/pmjdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=your_local_db_password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.security.user.name=admin
-spring.security.user.password=admin123
+# Mail (dev) - if you don't have SMTP configured, don't worry; email sending will just fail silently.
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=your-smtp-user
+spring.mail.password=your-smtp-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
